--- a/src/styles/campaign-side-by-side.scss
+++ b/src/styles/campaign-side-by-side.scss
@@ -211,11 +211,11 @@
         position: relative;
         background-repeat: no-repeat;
         background-size: cover;
-        background-position: center center;
+        background-position: top;
 
         &:not(.has-foregroundImage) {
             @include breakpoint-max($bp-medium) {
-                height: 400px;
+                height: 310px;
             }
         }
 
@@ -235,16 +235,9 @@
             object-fit: cover;
             transition: all 250ms cubic-bezier(0.1, 0.2, 0.3, 0.4);
 
-            &.phone-frame {
-                 transform: translate3d(10px, 0px, 0px);
-            }
-
             @include breakpoint-max($bp-medium) {
                 width: 100%;
-
-                &.phone-frame {
-                    padding: 30px;
-                 }
+                padding: 30px;
             }
         }
 
