--- a/src/styles/image-list.scss
+++ b/src/styles/image-list.scss
@@ -142,13 +142,21 @@
         }
         .imagelist-item-text {
             flex: 1;
-            margin-right: 20px;
+
+            @include breakpoint-min($bp-medium) {
+                margin-right: 20px;
+            }
         }
         .chevron-arrow {
             align-self: center;
             opacity: 0;
             transform: translateY(100px);
             transition: all 0.4s ease-out;
+
+            @include breakpoint-max($bp-small) {
+                display: none;
+                visibility: hidden;
+            }
         }
     }
 }
